href attribute was added, css class name was changed, and hover css still was added

--- a/public/index.html
+++ b/public/index.html
@@ -40,9 +40,7 @@
             value="Log in"
             class="authentication-form-container__button"
           />
-          <a href="#" class="authentication-page-container__link"
-            >Forgot password?</a
-          >
+          <a href="#" class="link">Forgot password?</a>
         </form>
         <div class="left-block__separator">
           <div class="separator__line"></div>
@@ -50,8 +48,7 @@
           <div class="separator__line"></div>
         </div>
         <span class="left-block__new-user-message"
-          >Don't have an account?&nbsp;<a
-            class="authentication-page-container__link"
+          >Don't have an account?&nbsp;<a href="#" class="link"
             >Sign up</a
           ></span
         >
